# Ecommerce

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.ps1  pyproject.toml
alembic/: env.py
alembic/versions/: 2462b34ae496_initial_migration.py  29fffd879547_ajuste_estructura_inicial.py  2dc478e78f73_cambion_en_las_tablas_de_la_base_de_.py  a9f0c274f4b9_cambios.py  cc67b0c833ce_primer_commit.py
app/: main.py
app/api/v1/: auth.py  deps.py  order_item.py  orders.py  products.py  users.py
app/core/: config.py  security.py  settings.py
app/db/: models.py  session.py
app/schemas/: auth.py  enums.py  order_items.py  orders.py  products.py  users.py
app/scripts/: create_super_user.py
app/services/: auth.py  order_items_logic.py  orders_logic.py  product_logic.py  user_logic.py
