[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.120.3",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # errores de estilo (PEP8)
  "F",   # errores reales (variables, imports)
  "I",   # orden de imports
  "B",   # bugs comunes
  "UP",  # modernizar Python
  "SIM", # simplificaciones
]

ignore = [
  "E501", # líneas largas (formatter manda)
]

[tool.ruff.lint.per-file-ignores]
"app/api/**" = ["B008"]
"**/deps.py" = ["B008"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
